src/errors/examples/article-error-example.ts
export const ArticleErrorExample = {
  notFound: {
    message: 'article not found',
    error: 'Not Found',
    statusCode: 404,
  },
};
